fix:
Deleted sun misc java option